
2000-11-28	 Sergei Organov <osv@javad.ru>

	* libc/getcwd.c: Ensure _closedir(dir) is called even on
	error exit from the routine.

2000-11-25  Antti P Miettinen  <antti.p.miettinen@nokia.com>

	* libc/termios.c, libc/termiostypes.h: Task driver driver model
	and line discipline support from Thomas Doerfler
	<Thomas.Doerfler@imd-systems.de>.

2000-11-20	 Dmitry Kargapolov <dk@gentex.ru>

	* libc/mount.c: Make sure there is space allocated for a device name
	in the mount table entry.

2000-11-17	Jennifer Averret <jennifer@OARcorp.com>

	* libc/mount.c (search_mt_for_mount_point): Deleted routine.
	* libc/mount.c (Is_node_fs_root): Replacement for above that
	accounts for the imaginary root node being returned by the
	filesystem evaluation routine.
	* libc/unmount.c (unmount): Account for imaginary root node
	being returned and improved variable names to clarify code.
	* libc/unmount.c (file_systems_below_this_mountpoint):  Body of
	routine replaced to account for imaginary root node being returned.

2000-11-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libc/libio.c: Special treatment of O_NDELAY for Cygwin.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-11-01	Joel Sherrill <joel@OARcorp.com>

	* configure.in: Added include/rtems subdirectory.

2000-11-01	Joel Sherrill <joel@OARcorp.com>

	* include/Makefile.am, include/rtems/libio_.h, libc/Makefile.am,
	libc/assoc.c, libc/assocnamebad.c, libc/base_fs.c, libc/cfsetispeed.c,
	libc/cfsetospeed.c, libc/chdir.c, libc/chmod.c, libc/chown.c,
	libc/close.c, libc/closedir.c, libc/dup2.c, libc/error.c, libc/eval.c,
	libc/fchdir.c, libc/fchmod.c, libc/fcntl.c, libc/fdatasync.c,
	libc/fpathconf.c, libc/fstat.c, libc/fsync.c, libc/ftruncate.c,
	libc/getdents.c, libc/ioctl.c, libc/libio.c, libc/libio_sockets.c,